[package]
name = "near-nft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

near-sdk = "4.0.0"
serde_json = "1.0"
borsh = "0.9.3"

[lib]
crate-type = ["cdylib", "rlib"]


[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true



